syntax = "proto3";

option csharp_namespace = "Simulation.FDTD.Grpc";

// The calculate service definition.
service FDTDCalculator {
  // Calculates FDTD
  rpc CalculateFDTD (FDTDRequest) returns (stream FDTDReply);
}

message SphericalCoordinate {
  double radius = 1;
  double polar = 2;
  double azimuth = 3;
}

message WaveLengthConfig {
  double lower = 1;
  double upper = 2;
  int32 count = 3;
}

// The request message containing FDTD parameters.
// <SolidMaterial>false</SolidMaterial>
message FDTDRequest {
  string mesh = 1;
  SphericalCoordinate incident_magnitude = 2;
  int32 num_steps = 3;
  WaveLengthConfig wavelength_config = 4;
}

// The response message containing progress or result of calculation.
message FDTDReply {
  bool done = 1;
  int32 time = 2;
  string result = 3;
}
